<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SQLite</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="createTable">Create Table</string>
    <string name="updateTable">Update Table</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="query">Query</string>

</resources>
