<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    <Button 
        android:id="@+id/createTable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/createTable"/>
    <Button 
        android:id="@+id/updateTable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/updateTable"/>
    <Button 
        android:id="@+id/insert"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert"/>
    <Button 
        android:id="@+id/update"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"/>
    <Button 
        android:id="@+id/query"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/query"/>
</LinearLayout>
